--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/16_scrambledeggs/16_27.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/16_scrambledeggs/16_27.yaml
@@ -13,8 +13,10 @@ step_annotations:
 - description: Add-Add 1/8 tsp of turmeric to the pan
   end_time: 115.34450580242651
   errors:
-  - description: 1/2 instead of 1/8
+  - description: Add 1/2 tsp instead of 1/8 tsp
     tag: Measurement Error
+  - description: Step performed before preparing the ingredients
+    tag: Order Error
   modified_description: Add-Add 1/2 tsp of turmeric to the pan
   start_time: 56.24379329720522
   step_id: 168
@@ -23,6 +25,8 @@ step_annotations:
   errors:
   - description: No chop before use the cilantro
     tag: Preparation Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: Prepare 1 tsp cilantro
   start_time: 121.50083002172039
   step_id: 158
@@ -32,6 +36,9 @@ step_annotations:
   errors:
   - description: High heat instead of medium heat
     tag: Temperature Error
+  - description: Step performed after adding turmeric to the pan and before preparing
+      the ingredients
+    tag: Order Error
   modified_description: Heat-Heat 2 tbsp oil in a heavy-bottomed or nonstick pan on
     high heat
   start_time: 173.213953463789
@@ -41,54 +48,72 @@ step_annotations:
   errors:
   - description: 1 instead of 1/3 tsp
     tag: Measurement Error
+  - description: Step performed after adding turmeric to the pan and before preparing the ingredients
+    tag: Order Error
   modified_description: add-add 1 tsp salt to the pan
   start_time: 291.4153784742316
   step_id: 178
 - description: add-add 1 tbsp milk to the bowl
   end_time: 355.8515719695076
   errors:
-  - description: Splash some milk outside
+  - description: Spill some milk outside the bowl
     tag: Technique Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: add-add 1 tbsp milk to the bowl, but splash some milk outside
   start_time: 311.5260375905916
   step_id: 177
 - description: Chop-Chop 1 green chilli
   end_time: 407.1542737969566
   errors:
-  - description: 2 instead of 1
+  - description: Chop 2 instead of 1 green chilli
     tag: Measurement Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: Chop-Chop 2 green chilli
   start_time: 364.470425876519
   step_id: 161
 - description: Peel-Peel 2 garlic cloves
   end_time: 477.7467915115265
   errors:
-  - description: 1 instead of 2 garlic cloves
+  - description: Peel 1 instead of 2 garlic cloves
     tag: Measurement Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: Peel-Peel 1 garlic clove
   start_time: 409.61680348467416
   step_id: 176
 - description: add-add 1/3 tsp salt to the bowl
   end_time: 500.7304019302236
+  errors:
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   start_time: 483.4926941162008
   step_id: 164
 - description: Mince-Mince peeled garlic cloves
   end_time: 514.6847368272898
   errors:
-  - description: Chop instead of mince
+  - description: Slice instead of mincing the garlic cloves
     tag: Technique Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: Chop peeled garlic cloves
   start_time: 502.372088388702
   step_id: 180
 - description: add-add chopped onions to the pan
   end_time: 525.7661204220187
+  errors:
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   start_time: 517.9681097442465
   step_id: 179
 - description: Crack-Crack one egg in the bowl
   end_time: 562.7040657377821
   errors:
-  - description: 2 instead of one egg
+  - description: Crack 2 eggs instead of one egg
     tag: Measurement Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: Crack-Crack 2 eggs in the bowl
   start_time: 531.5120230266931
   step_id: 167
@@ -97,19 +122,30 @@ step_annotations:
   errors:
   - description: remove the onions quickly
     tag: Timing Error
+  - description: Step performed after adding turmeric to the pan and before preparing the ingredients
+    tag: Order Error
   modified_description: Saute-Saute the onions on medium heat, but remove them quickly
   start_time: 572.5541844886523
   step_id: 166
 - description: Add-Add chilli to the pan
   end_time: 606.6191785020785
+  errors:
+  - description: Step performed after adding turmeric to the pan and before preparing the ingredients
+    tag: Order Error
   start_time: 591.0231571465339
   step_id: 162
 - description: Add-Add garlic to the pan
   end_time: 615.2380324090899
+  errors:
+  - description: Step performed after adding turmeric to the pan and before preparing the ingredients
+    tag: Order Error
   start_time: 606.6191785020785
   step_id: 160
 - description: Whisk-Whisk the egg mixture in the bowl
   end_time: 641.325
+  errors:
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   start_time: 618.9318269406663
   step_id: 159
 - description: Cook-Cook for 1 minute, mixing everything
@@ -117,6 +153,8 @@ step_annotations:
   errors:
   - description: 30 seconds instead of 1 minute
     tag: Timing Error
+  - description: Step performed after adding turmeric to the pan
+    tag: Order Error
   modified_description: Cook-Cook for 30 seconds, mixing everything
   start_time: 641.5050157447438
   step_id: 165
@@ -124,8 +162,7 @@ step_annotations:
   end_time: 690.7556094990948
   start_time: 678.0325394458876
   step_id: 172
-- description: mixing-Keep mixing with a spatula for 3 minutes or until the eggs are
-    almost cooked
+- description: mixing-Keep mixing with a spatula for 3 minutes or until the eggs are almost cooked
   end_time: 810.1882993533961
   start_time: 714.9704847616508
   step_id: 171
@@ -135,13 +172,25 @@ step_annotations:
   step_id: 174
 - description: Chop-Chop 1/4 tomato
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 169
 - description: Add-Add tomatoes to the pan
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 175
 - description: Cook-Cook covered for 1 minute or until the tomatoes soften
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 170
