Updating code for generation of all statistics about the data

--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/15_tomatochutney/15_19.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/15_tomatochutney/15_19.yaml
@@ -1,5 +1,5 @@
 activity_id: 15
-is_error: false
+is_error: true
 recording_id: '15_19'
 step_annotations:
 - description: Peel-Peel 4 large garlic cloves
