--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/25_panfriedtofu/25_13.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/25_panfriedtofu/25_13.yaml
@@ -1,5 +1,5 @@
 activity_id: 25
-is_error: false
+is_error: true
 recording_id: '25_13'
 step_annotations:
 - description: Add-Add 1 tablespoon of olive oil to a non-stick pan
