--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_41.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_41.yaml
@@ -176,5 +176,9 @@ step_annotations:
   step_id: 254
 - description: Add-Add 1/6 cup water the bowl
   end_time: -1.0
+  errors:
+    - description: Skipped this step
+      tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 269
