--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/18_zoodles/18_11.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/18_zoodles/18_11.yaml
@@ -39,16 +39,13 @@ step_annotations:
   end_time: 651.467
   errors:
   - description: Added pepper to taste in this step
-    tag: Other
+    tag: Preparation Error
   modified_description: season-pepper to taste
   start_time: 626.234
   step_id: 193
 - description: season-pepper to taste
   end_time: 701.813
   errors:
-  - description: added cheese in this step erroneously and spoiled some out while
-      adding
-    tag: Other
   - description: Added cheese in this step instead of period and spiked some out while
       adding
     tag: Preparation Error
